--- a/security-ajax-auth/src/main/resources/templates/home.html
+++ b/security-ajax-auth/src/main/resources/templates/home.html
@@ -16,20 +16,20 @@
                 // csrf 설정 값 헤더에 설정
                 xhr.setRequestHeader(csrfHeader, csrfToken);
                 xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
-                xhr.setRequestHeader("Content-type","application/json");
             },
             success : function(data) {
                 console.log(data);
                 window.location = "/messages";
             },
             error : function(xhr, status, error) {
-                console.log(xhr.responseJSON);
-                console.log(status);
-                console.log(error);
-                if(xhr.responseJSON.status == '401') {
-                    window.location = '/api/login?error=true&exception=' + xhr.responseJSON.message;
-                } else if(xhr.responseJSON.status == '403') {
-                    window.location = '/api/denied?exception=' + xhr.responseJSON.message;
+                const response = xhr.responseJSON;
+                const responseStatus = response.status;
+                const responseMsg = response.message;
+
+                if(responseStatus == '401') {
+                    window.location = '/api/login?error=true&exception=' + responseMsg;
+                } else if(responseStatus == '403') {
+                    window.location = '/api/denied?exception=' + responseMsg;
                 }
             }
         });
