--- a/security-ajax-auth/src/main/resources/templates/login.html
+++ b/security-ajax-auth/src/main/resources/templates/login.html
@@ -52,8 +52,7 @@
             <div th:if="${param.error}" class="form-group">
                 <span th:text="${exception}" class="alert alert-danger">잘못된 아이디나 암호입니다</span>
             </div>
-            <form th:action="@{/login_proc}" class="form-signin" method="post">
-                <input type="hidden" th:value="secret" name="secret_key" />
+            <form class="form-signin" method="post">
                 <div class="form-group">
                     <input type="text" class="form-control" name="username" placeholder="아이디" required="required" autofocus="autofocus">
                 </div>
